--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 <div class="page-header">
   <h1>Visit us</h1>
 </div>
-  <div class="col-sm-4">
+  <div class="col-sm-6 col-md-4 col-lg-3">
       <h4>Cat Choice Food</h4>
       <h4>12 Tirlibirli Str.</h4>
       <h4>Merylebery</h4>
@@ -196,7 +196,7 @@
 
 
     </div>
-  <div class="col-sm-8">
+  <div class="col-sm-6 col-md-8 col-lg-9">
    <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/35T8wtmTbVg"></iframe>
       </div>     
