--- a/index.html
+++ b/index.html
@@ -188,11 +188,11 @@
   <h1>Visit us</h1>
 </div>
   <div class="col-sm-6 col-md-4 col-lg-3">
-      <h4>Cat Choice Food</h4>
-      <h4>12 Tirlibirli Str.</h4>
-      <h4>Merylebery</h4>
-      <h4>+478 6339 7990</h4>
-      <h4>cat@choice.food</h4>
+      <h4 class="text-center" >Cat Choice Food</h4>
+      <h4 class="text-center">12 Tirlibirli Str.</h4>
+      <h4 class="text-center">Merylebery</h4>
+      <h4 class="text-center">+478 6339 7990</h4>
+      <h4 class="text-center">cat@choice.food</h4>
 
 
     </div>
