--- a/index.html
+++ b/index.html
@@ -119,8 +119,17 @@
 </div>
 <div class="container-fluid">   
   <div class="jumbotron">
-    <p>We work hard on delivering your cats the best quality food you can imagine. Pure meet  with ecological certificates.</p> 
+      <p>We work hard on delivering your cats the best quality food you can imagine. Pure meat  with <a href="#" data-toggle="tooltip" data-placement="auto right"  title="We have it tested!">ecological</a> certificates.</p> 
   </div>
+
+<!--tooltip jquery-->
+<script>
+$(document).ready(function(){
+    $('[data-toggle="tooltip"]').tooltip();   
+});
+</script>
+    
+    
 <ul class="pager">
   <li><a href="#">Previous</a></li>   <!--connect pager with jumbotron-->
   <li><a href="#">Next</a></li>
